# oresat-linux-updater

./: .gitignore  README.md  dev-requirements.txt  oresat-linux-updaterd.service  org.oresat.updater.conf  pytest.ini  requirements.txt  setup.cfg  setup.py  stdeb.cfg
conf_files/: oresat-updaterd.service  org.OreSat.LinuxUpdater.conf
debian/: changelog  control  install  oresat-linux-updater.install  postrm  prerm
docs/: archive_file.rst  conf.py  daemon.rst  glossary.rst  how_it_works.rst  index.rst  olu_status_file.rst  status_archive.rst  update_archive.rst  update_archive_file.rst  update_maker.rst
oresat-linux-updaterd/: cache_manager.py  dbus_adapter.py  main.py  state_machine.py  updater.py
oresat_linux_updater/: __init__.py  __main__.py  apt_interface.py  client.py  daemon.py  daemon_client.py  daemon_main.py  dbus_server.py  file_cache.py  instruction.py  instructions_list.py  linux_updater.py  linux_updater_daemon.py  main.py  olm_file.py  olu_test.py  status_archive.py  update.py  update_archive.py  update_file_maker.py  update_maker.py  updater.py  updater_daemon.py
scripts/: .gitignore  add_to_cache.py  get_pkg_list.py  make_update_package.py
src/: apt_interface.py  daemon.py  dbus_adapter.py  file_cache.py  linux_updater.py  main.py  updater.py  updater_main.py
test/: test_apt_interface.py  test_file_cache.py
tests/: common.py  test_daemon.py  test_file_cache.py  test_instruction.py  test_instructions_list.py  test_linux_updater.py  test_status_archive.py  test_update.py  test_update_archive.py  test_updater.py  test_updater_daemon.py
(+55 files in other folders)
