[bdist_wheel]
universal = 0

[metadata]
name = updaterd
version = 0.1.0
license = GPLv3
license_file = ../LICENSE
description = A common remote update daemon on all oresat boards.
long_description = file: README.md
author = Ryan Medick
author_email = rmedick@pdx.edu
maintainer = Ryan Medick
maintainer_email = rmedick@pdx.edu
url = https://github.com/oresat/oresat-linux-updater
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:

install_requires=
    pydbus>=0.6.0-1
    apt>=1.8.4.1

python_requires = >=3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[DEFAULT]
Depends: prucam-dkms python3-pydbus python3-apt
